@@ -1,13 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD xfce4-settings-9999.ebuild 1010 RMD160 246297c34ba9d3a2f0da9098229caa6f215c872a SHA1 bcdc6c909aff414ddaee4d83d7ae645d999982e8 SHA256 1f7b237e806b54835ee438c71beb6c031de2672cf935c6cddd1af6566251bb21
-MISC ChangeLog 1299 RMD160 ced23e90af43f38386f9f8d4859d07fa22737d5e SHA1 cd71f859b53754736f31d21a8ee48bbc18ebbe33 SHA256 f220f52d7c766d5b27e9ce39c08dc858967ff63e2de04ecf81fcf547d3b7713c
-MISC metadata.xml 252 RMD160 0238e19164de9af8e6a05725a319063a57f8142c SHA1 fe67c03682018f72a05352da7fa3fb34c8307bff SHA256 8f89f930e81f30b402c2a69c33d5f6278375ea4cc6ea292ce62d3a3ba86003ce
+EBUILD xfce4-settings-9999.ebuild 1055 RMD160 2e767348565945d0a93973f6e27f3c771a39198a SHA1 905b208a271a0d480497deca516a112345be386b SHA256 dc8879d8e6ea2936ffc20a47172d38312dd4d8a5a980c76e3023fb06f369d760
+MISC ChangeLog 1431 RMD160 a2e4a1faf432df52088c5a7655f9117284f68251 SHA1 e5308eb3cf0c86f3e331b483a61f0d8a9015f249 SHA256 d822d50044669757a60b93dd2bd01986c7e33cfad3abc872f03b3195ea8d86e1
+MISC metadata.xml 363 RMD160 2f66508d394f9cc14654775f3a0b117bc10d3ef5 SHA1 8a3e6715e41535ea04377624a621c9ada60fd5ff SHA256 2442135d806e37420f1904d5b32e8b7afe94ed212307d25667f363db06c558e3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkXgZcACgkQKhnDs22gwa+08QCg1u8cHkb0YLRRjaaKh6ivXT1j
-H9kAnAt5xxl43zDLdNcyuDyeL0lvI3Bt
-=ppKZ
+iEYEARECAAYFAkkXgp0ACgkQKhnDs22gwa9reACdGvHzTM8M6vSB3UEloiQLRwQw
+90wAoOJB7In6l+O6o7RO/CYkARnne7YD
+=+YcL
 -----END PGP SIGNATURE-----
