@@ -3,6 +3,7 @@
 <pkgmetadata>
 <herd>xfce</herd>
 <use>
-	<flag name='sound'>Enable sound event support with media-libs/libcanberra</flag>
+	<flag name='sound'>Enable sound event support with <pkg>media-libs/libcanberra</pkg></flag>
+	<flag name='keyboard'>Enable Keyboard layout selection with <pkg>x11-libs/libxklavier</pkg></flag>
 </use>
 </pkgmetadata>
