@@ -4,6 +4,10 @@
 
   10 Nov 2008; Christoph Mende <angelos@gentoo.org> metadata.xml,
   xfce4-settings-9999.ebuild:
+  Add USE=keyboard for libxklavier
+
+  10 Nov 2008; Christoph Mende <angelos@gentoo.org> metadata.xml,
+  xfce4-settings-9999.ebuild:
   Add USE=sound for libcanberra
 
   09 Nov 2008; Christoph Mende <angelos@gentoo.org>
